Opened 12 years ago

Closed 9 years ago

#3886 closed defect (fixed)

imc: read coefficients failed

Reported by: ami_stuff Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords: imc
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

It's unlikely that someone will fix this bug, but I will report it anyway.

C:\>ffmpeg -i imc_44khz.wav out.wav
ffmpeg version N-65672-g65f05ef Copyright (c) 2000-2014 the FFmpeg developers
  built on Aug 15 2014 22:01:33 with gcc 4.8.3 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --
enable-libfreetype --enable-libgme --enable-libgsm --enable-libilbc --enable-lib
modplug --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrw
b --enable-libopenjpeg --enable-libopus --enable-librtmp --enable-libschroedinge
r --enable-libsoxr --enable-libspeex --enable-libtheora --enable-libtwolame --en
able-libvidstab --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-libvorbis
 --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-
libx265 --enable-libxavs --enable-libxvid --enable-decklink --enable-zlib
  libavutil      54.  3.100 / 54.  3.100
  libavcodec     56.  0.101 / 56.  0.101
  libavformat    56.  1.100 / 56.  1.100
  libavdevice    56.  0.100 / 56.  0.100
  libavfilter     5.  0.100 /  5.  0.100
  libswscale      3.  0.100 /  3.  0.100
  libswresample   1.  0.100 /  1.  0.100
  libpostproc    53.  0.100 / 53.  0.100
Input #0, wav, from 'imc_44khz.wav':
  Duration: 00:00:30.01, bitrate: 88 kb/s
    Stream #0:0: Audio: imc ([1][4][0][0] / 0x0401), 44100 Hz, mono, fltp, 88 kb
/s
Output #0, wav, to 'out.wav':
  Metadata:
    ISFT            : Lavf56.1.100
    Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 44100 Hz, mono, s16,
705 kb/s
    Metadata:
      encoder         : Lavc56.0.101 pcm_s16le
Stream mapping:
  Stream #0:0 -> #0:0 (imc (native) -> pcm_s16le (native))
Press [q] to stop, [?] for help
Multiple frames in a packet from stream 0
[imc @ 02f0f6a0] Read coefficients failed
Error while decoding stream #0:0: Invalid data found when processing input
[imc @ 02f0f6a0] Read coefficients failed
Error while decoding stream #0:0: Invalid data found when processing input
[imc @ 02f0f6a0] Read coefficients failed
Error while decoding stream #0:0: Invalid data found when processing input
[imc @ 02f0f6a0] Read coefficients failed
Error while decoding stream #0:0: Invalid data found when processing input
[imc @ 02f0f6a0] Read coefficients failed
Error while decoding stream #0:0: Invalid data found when processing input
size=    2449kB time=00:00:30.01 bitrate= 668.4kbits/s
video:0kB audio:2448kB subtitle:0kB other streams:0kB global headers:0kB muxing
overhead: 0.003111%

Attachments (8)

imc_44khz.wav (323.2 KB ) - added by ami_stuff 12 years ago.
imc_22khz.wav (161.6 KB ) - added by ami_stuff 12 years ago.
imc_11khz.wav (80.8 KB ) - added by ami_stuff 12 years ago.
imc.7z (2.4 MB ) - added by ami_stuff 10 years ago.
8khz.avi (613.6 KB ) - added by ami_stuff 10 years ago.
8khz_output_from_original_codec.avi (1.1 MB ) - added by ami_stuff 10 years ago.
imc.2.7z (1.1 MB ) - added by ami_stuff 10 years ago.
other.7z (172.2 KB ) - added by ami_stuff 10 years ago.

Change History (18)

by ami_stuff, 12 years ago

Attachment: imc_44khz.wav added

by ami_stuff, 12 years ago

Attachment: imc_22khz.wav added

by ami_stuff, 12 years ago

Attachment: imc_11khz.wav added

comment:1 by Carl Eugen Hoyos, 12 years ago

Component: undeterminedavcodec
Keywords: imc added
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

Works fine with mplayer -ac imc imc_11khz.wav​.

by ami_stuff, 10 years ago

Attachment: imc.7z added

comment:2 by ami_stuff, 10 years ago

attached some more samples

C:\>ffmpeg -i imc_44khz.avi -f null -
ffmpeg version N-78758-g5156578 Copyright (c) 2000-2016 the FFmpeg developers
  built with gcc 5.3.0 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --
enable-libdcadec --enable-libfreetype --enable-libgme --enable-libgsm --enable-l
ibilbc --enable-libmodplug --enable-libmp3lame --enable-libopencore-amrnb --enab
le-libopencore-amrwb --enable-libopenjpeg --enable-libopus --enable-librtmp --en
able-libschroedinger --enable-libsoxr --enable-libspeex --enable-libtheora --ena
ble-libtwolame --enable-libvidstab --enable-libvo-amrwbenc --enable-libvorbis --
enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-lib
x265 --enable-libxavs --enable-libxvid --enable-libzimg --enable-lzma --enable-d
ecklink --enable-zlib
  libavutil      55. 19.100 / 55. 19.100
  libavcodec     57. 27.100 / 57. 27.100
  libavformat    57. 26.100 / 57. 26.100
  libavdevice    57.  0.101 / 57.  0.101
  libavfilter     6. 37.100 /  6. 37.100
  libswscale      4.  0.100 /  4.  0.100
  libswresample   2.  0.101 /  2.  0.101
  libpostproc    54.  0.100 / 54.  0.100
Input #0, avi, from 'imc_44khz.avi':
  Metadata:
    encoder         : Lavf57.26.100
  Duration: 00:00:14.20, start: 0.000000, bitrate: 342 kb/s
    Stream #0:0: Video: cinepak (cvid / 0x64697663), rgb24, 160x120, 251 kb/s, 5
 fps, 5 tbr, 5 tbn, 5 tbc
    Stream #0:1: Audio: imc ([1][4][0][0] / 0x0401), 44100 Hz, mono, fltp, 88 kb
/s
Output #0, null, to 'pipe:':
  Metadata:
    encoder         : Lavf57.26.100
    Stream #0:0: Video: wrapped_avframe, rgb24, 160x120, q=2-31, 200 kb/s, 5 fps
, 5 tbn, 5 tbc
    Metadata:
      encoder         : Lavc57.27.100 wrapped_avframe
    Stream #0:1: Audio: pcm_s16le, 44100 Hz, mono, s16, 705 kb/s
    Metadata:
      encoder         : Lavc57.27.100 pcm_s16le
Stream mapping:
  Stream #0:0 -> #0:0 (cinepak (native) -> wrapped_avframe (native))
  Stream #0:1 -> #0:1 (imc (native) -> pcm_s16le (native))
Press [q] to stop, [?] for help
[imc @ 038f2920] Potential problem on band 26, coefficient 192: cw_len=1
[imc @ 038f2920] Potential problem on band 26, coefficient 194: cw_len=1
frame=   71 fps=0.0 q=-0.0 Lsize=N/A time=00:00:14.20 bitrate=N/A speed= 454x

video:27kB audio:1202kB subtitle:0kB other streams:0kB global headers:0kB muxing
 overhead: unknown
Last edited 10 years ago by ami_stuff (previous) (diff)

by ami_stuff, 10 years ago

Attachment: 8khz.avi added

by ami_stuff, 10 years ago

comment:3 by ami_stuff, 10 years ago

one more sample (no error, but not-so-correct output)

comment:4 by ami_stuff, 10 years ago

see also #5425

by ami_stuff, 10 years ago

Attachment: imc.2.7z added

in reply to:  3 comment:5 by ami_stuff, 10 years ago

Replying to ami_stuff:

one more sample (no error, but not-so-correct output)

full set attached

comment:6 by Elon Musk, 10 years ago

Consider providing bounty.

by ami_stuff, 10 years ago

Attachment: other.7z added

comment:7 by ami_stuff, 10 years ago

I attached also some unrelated samples - likely no sense to create separate tickets.

Last edited 10 years ago by ami_stuff (previous) (diff)

comment:8 by Elon Musk, 10 years ago

What is issue with other.7z files?

comment:9 by ami_stuff, 10 years ago

sipr_16k_could_be_better.rm - metalic artifacts around 21-32s
14_4_could_be_better.ra - some "clicks" and not clear sound
truespeech_could_be_better.wav - original codec decodes it better (imho)

comment:10 by Elon Musk, 9 years ago

Resolution: fixed
Status: openclosed

Fixed in 06a66e7d9496adde91a54f3641eec321a093e5a5.

For other codecs open separate tickets.

Note: See TracTickets for help on using tickets.